@@ -11,6 +11,7 @@ use Git::Hooks;
 use Git::Repository::Log;
 use Path::Tiny;
 use List::MoreUtils qw/uniq/;
+use Set::Scalar;
 
 my $PKG = __PACKAGE__;
 (my $CFG = __PACKAGE__) =~ s/.*::/githooks./;
@@ -88,30 +89,31 @@ sub _jira {
     return $cache->{jira};
 }
 
+sub _jql_query {
+    my ($git, $jql) = @_;
+
+    my $cache = $git->cache($PKG);
+
+    unless (exists $cache->{jql}{$jql}) {
+        my $jira = _jira($git);
+        $jira->set_search_iterator({
+            jql    => $jql,
+            fields => $git->get_config($CFG => 'check-code')
+                ? [qw'*all']
+                : [qw'assignee fixVersions resolution'],
+        });
+        while (my $issue = $jira->next_issue) {
+            $cache->{jql}{$jql}{$issue->{key}} = $issue;
+        }
+    }
+
+    return $cache->{jql}{$jql};
+}
+
 sub _disconnect_jira {
     my ($git) = @_;
     delete $git->cache($PKG)->{jira};
     return;
-}
-
-# Returns a JIRA::REST object or undef if there is any problem
-
-sub get_issue {
-    my ($git, $key) = @_;
-
-    my $jira = _jira($git) or return;
-
-    my $cache = $git->cache($PKG);
-
-    # Try to get the issue from the cache
-    unless (exists $cache->{keys}{$key}) {
-        $cache->{keys}{$key} = eval { $jira->GET("/issue/$key") };
-        length $@
-            and $git->error($PKG, "cannot get issue $key", $@)
-                and return;
-    }
-
-    return $cache->{keys}{$key};
 }
 
 sub check_codes {
@@ -161,113 +163,131 @@ sub _check_jira_keys {          ## no critic (ProhibitExcessComplexity)
         }
     }
 
-    my @issues;
-
-    my %projects    = map {($_ => undef)} $git->get_config($CFG => 'project');
-    my $unresolved  = $git->get_config($CFG => 'unresolved');
-    my %status      = map {($_ => undef)} $git->get_config($CFG => 'status');
-    my %issuetype   = map {($_ => undef)} $git->get_config($CFG => 'issuetype');
-    my $by_assignee = $git->get_config($CFG => 'by-assignee');
-    my @versions;
-    foreach ($git->get_config($CFG => 'fixversion')) {
-        my ($branch, $version) = split ' ', $_, 2;
-        my $last_paren_match;
-        if ($branch =~ /^\^/) {
-            next unless $ref =~ qr/$branch/;
-            $last_paren_match = $+;
-        } else {
-            next unless $ref eq $branch;
-        }
-        if ($version =~ /^\^/) {
-            $version =~ s/\$\+/\Q$last_paren_match\E/g if defined $last_paren_match;
-            push @versions, qr/$version/;
-        } else {
-            $version =~ s/\$\+/$last_paren_match/g if defined $last_paren_match;
-            push @versions, $version;
-        }
-    }
+    my %issues;                 # cache all grokked issues
 
     my $errors = 0;
 
-  KEY:
-    foreach my $key (@keys) {
-        not %projects
-            or $key =~ /([^-]+)/ and exists $projects{$1}
-                or $git->error($PKG, "do not cite issue $key. This repository accepts only issues from: "
-                                   . join(' ', sort keys %projects))
-                    and next KEY;
+    ############
+    # JQL checks
 
-        my $issue = get_issue($git, $key)
-            or ++$errors
-                and next KEY;
+    {
+        # global JQLs
+        my @jqls = $git->get_config($CFG => 'jql');
 
-        if (%issuetype && ! exists $issuetype{$issue->{fields}{issuetype}{name}}) {
-            my @issuetypes = sort keys %issuetype;
-            $git->error(
-                $PKG,
-                "issue $key cannot be used because it is of the unapproved type '$issue->{fields}{issuetype}{name}'",
-                "You can use the following issue types: @issuetypes",
-            );
-            ++$errors;
-            next KEY;
+        # ref-specific JQLs
+        foreach ($git->get_config($CFG => 'ref-jql')) {
+            my ($match_ref, $jql) = split ' ', $_, 2;
+            push @jqls, $jql if $ref =~ $match_ref;
         }
 
-        if (%status && ! exists $status{$issue->{fields}{status}{name}}) {
-            my @statuses = sort keys %status;
-            $git->error(
-                $PKG,
-                "issue $key cannot be used because it is in the unapproved status '$issue->{fields}{status}{name}'",
-                "The following statuses are approved: @statuses",
-            );
-            ++$errors;
-            next KEY;
-        }
-
-        if ($unresolved && defined $issue->{fields}{resolution}) {
-            $git->error($PKG, "issue $key cannot be used because it is already resolved");
-            ++$errors;
-            next KEY;
-        }
-
-      VERSION:
-        foreach my $version (@versions) {
-            foreach my $fixversion (@{$issue->{fields}{fixVersions}}) {
-                if (ref $version) {
-                    next VERSION if $fixversion->{name} =~ $version;
-                } else {
-                    next VERSION if $fixversion->{name} eq $version;
+        # Construct a JQL based on the deprecated configuration options
+        {
+            my @deprecated;
+            foreach my $option (qw/project issuetype status/) {
+                if (my @values = $git->get_config($CFG => $option)) {
+                    push @deprecated, "$option IN (@{[join(',', @values)]})";
                 }
             }
-            $git->error($PKG, "issue $key has no fixVersion matching '$version', which is required for commits affecting '$ref'");
-            ++$errors;
-            next KEY;
+            push @jqls, join(' AND ', @deprecated) if @deprecated;
         }
 
-        if ($by_assignee) {
-            my $user = $git->authenticated_user()
-                or $git->error($PKG, "cannot grok the authenticated user")
-                    and ++$errors
-                        and next KEY;
+        my $match_keys = "key IN (@{[join(',', @keys)]})";
+        my $cited_set  = Set::Scalar->new(@keys);
 
-            if (my $assignee = $issue->{fields}{assignee}) {
-                my $name = $assignee->{name};
-                $user eq $name
-                    or $git->error($PKG, "issue $key should be assigned to '$user', not '$name'")
-                        and ++$errors
-                            and next KEY;
-            } else {
-                $git->error($PKG, "issue $key should be assigned to '$user', but it's unassigned");
+        # Conjunct $match_keys with each JQL expression to match only the
+        # cited issues.
+        @jqls = map {"$match_keys AND $_"} @jqls;
+
+        # If there is no JQL expression used to restrict the search we
+        # inject an expression to search for the cited issues.
+        @jqls = ($match_keys) unless @jqls;
+
+        foreach my $jql (@jqls) {
+            my $issues = _jql_query($git, $jql);
+
+            @issues{keys %$issues} = values %$issues; # cache all matched issues
+
+            my $matched_set = Set::Scalar->new(keys %$issues);
+            if (my $missed_set = $cited_set - $matched_set) {
+                $git->error($PKG, "the JIRA issue(s) @{[$missed_set]} do(es) not match the expression '$jql'");
                 ++$errors;
-                next KEY;
+            }
+        }
+    }
+
+    ################
+    # Non-JQL checks
+    {
+        my $unresolved  = $git->get_config($CFG => 'unresolved');
+        my $by_assignee = $git->get_config($CFG => 'by-assignee');
+        my @versions;
+        foreach ($git->get_config($CFG => 'fixversion')) {
+            my ($branch, $version) = split ' ', $_, 2;
+            my $last_paren_match;
+            if ($branch =~ /^\^/) {
+                next unless $ref =~ qr/$branch/;
+                $last_paren_match = $+;
+            } else {
+                next unless $ref eq $branch;
+            }
+            if ($version =~ /^\^/) {
+                $version =~ s/\$\+/\Q$last_paren_match\E/g if defined $last_paren_match;
+                push @versions, qr/$version/;
+            } else {
+                $version =~ s/\$\+/$last_paren_match/g if defined $last_paren_match;
+                push @versions, $version;
             }
         }
 
-        push @issues, $issue;
+      ISSUE:
+        while (my ($key, $issue) = each %issues) {
+            if ($unresolved && defined $issue->{fields}{resolution}) {
+                $git->error($PKG, "issue $key cannot be used because it is already resolved");
+                ++$errors;
+                next ISSUE;
+            }
+
+          VERSION:
+            foreach my $version (@versions) {
+                foreach my $fixversion (@{$issue->{fields}{fixVersions}}) {
+                    if (ref $version) {
+                        next VERSION if $fixversion->{name} =~ $version;
+                    } else {
+                        next VERSION if $fixversion->{name} eq $version;
+                    }
+                }
+                $git->error($PKG, "issue $key has no fixVersion matching '$version', which is required for commits affecting '$ref'");
+                ++$errors;
+                next ISSUE;
+            }
+
+            if ($by_assignee) {
+                my $user = $git->authenticated_user()
+                    or $git->error($PKG, "cannot grok the authenticated user")
+                    and ++$errors
+                    and next ISSUE;
+
+                if (my $assignee = $issue->{fields}{assignee}) {
+                    my $name = $assignee->{name};
+                    $user eq $name
+                        or $git->error($PKG, "issue $key should be assigned to '$user', not '$name'")
+                        and ++$errors
+                        and next KEY;
+                } else {
+                    $git->error($PKG, "issue $key should be assigned to '$user', but it's unassigned");
+                    ++$errors;
+                    next KEY;
+                }
+            }
+        }
     }
+
+    #############
+    # Code checks
 
     foreach my $code (check_codes($git)) {
         if (my $jira = _jira($git)) {
-            my $ok = eval { $code->($git, $commit, $jira, @issues) };
+            my $ok = eval { $code->($git, $commit, $jira, values %issues) };
             if (defined $ok) {
                 ++$errors unless $ok;
             } elsif (length $@) {
@@ -465,7 +485,7 @@ DRAFT_PUBLISHED  \&check_patchset;
 
 
 __END__
-=for Pod::Coverage check_codes check_commit_msg check_ref notify_commit_msg notify_ref get_issue grok_msg_jiras
+=for Pod::Coverage check_codes check_commit_msg check_ref notify_commit_msg notify_ref grok_msg_jiras
 
 =head1 NAME
 
@@ -606,15 +626,39 @@ regexes are tried and JIRA keys are looked for in all of them. This
 allows you to more easily accomodate more than one way of specifying
 JIRA keys if you wish.
 
-=head2 githooks.checkjira.project KEY
+=head2 githooks.checkjira.jql JQL
 
-By default, the committer can reference any JIRA issue in the commit
-log. You can restrict the allowed keys to a set of JIRA projects by
-specifying a JIRA project key to this option. You can allow more than one
-project by specifying this option multiple times, once per project key.
+By default, any cited issue must exist on the server and be unresolved. You
+can specify other restrictions (and even allow for resolved issues) by
+specifying a L<JQL
+expression|https://confluence.atlassian.com/jirasoftwarecloud/advanced-searching-764478330.html>
+which must match all cited issues. For example, you may want to:
 
-If you set this option, then any cited JIRA issue that doesn't belong to one
-of the specified projects causes an error.
+=over
+
+=item * Allow for resolved issues
+
+  [githooks "checkjira"]
+    jql = resolution IS EMPTY OR resolution IS NOT EMPTY
+
+=item * Require specific projects, issuetypes, and statuses
+
+  [githooks "checkjira"]
+    jql = project IN (ABC, UTF, GIT) AND issuetype IN (Bug, Story) AND status IN ("In progress", "In testing")
+
+=back
+
+=head2 githooks.checkjira.ref-jql REF JQL
+
+You may impose restrictions on specific branches (or, more broadly, any
+reference) by mentioning them before the JQL expression. REF can be
+specified as a complete ref name (e.g. "refs/heads/master") or by a regular
+expression starting with a caret (C<^>), which is kept as part of the regexp
+(e.g. "^refs/heads/(master|fix)"). For instance:
+
+  [githooks "checkjira"]
+    jql = refs/heads/master fixVersion = future
+    jql = ^refs/heads/release/ fixVersion IN releasedVersions()
 
 =head2 githooks.checkjira.require [01]
 
@@ -626,17 +670,6 @@ make the reference optional by setting this option to 0.
 By default, every issue referenced must be unresolved, i.e., it must
 not have a resolution. You can relax this requirement by setting this
 option to 0.
-
-=head2 githooks.checkjira.status STATUSNAME
-
-By default, it doesn't matter in which status the JIRA issues are. By
-setting this multi-valued option you can restrict the valid statuses for the
-issues.
-
-=head2 githooks.checkjira.issuetype ISSUETYPENAME
-
-By default, it doesn't matter what type of JIRA issues are cited. By setting
-this multi-valued option you can restrict the valid issue types.
 
 =head2 githooks.checkjira.fixversion BRANCH FIXVERSION
 
@@ -671,7 +704,7 @@ So, suppose you have this configuration:
 
 Then, commits affecting the C<master> branch must cite issues assigned to
 the C<future> version. Also, commits affecting any branch which name begins
-with a version number (e.g. C<1.0.3>) be assinged to the corresponding JIRA
+with a version number (e.g. C<1.0.3>) be assigned to the corresponding JIRA
 version (e.g. C<1.0>).
 
 =head2 githooks.checkjira.by-assignee [01]
@@ -763,6 +796,42 @@ In this case, the visibility isn't restricted at all.
 
 =back
 
+=head2 githooks.checkjira.project KEY
+
+This option is B<DEPRECATED>. Please, use a JQL expression such the
+following to restrict by project key:
+
+  project IN (ABC, GIT)
+
+By default, the committer can reference any JIRA issue in the commit
+log. You can restrict the allowed keys to a set of JIRA projects by
+specifying a JIRA project key to this option. You can allow more than one
+project by specifying this option multiple times, once per project key.
+
+If you set this option, then any cited JIRA issue that doesn't belong to one
+of the specified projects causes an error.
+
+=head2 githooks.checkjira.status STATUSNAME
+
+This option is B<DEPRECATED>. Please, use a JQL expression such the
+following to restrict by status:
+
+  status IN (Open, "In Progress")
+
+By default, it doesn't matter in which status the JIRA issues are. By
+setting this multi-valued option you can restrict the valid statuses for the
+issues.
+
+=head2 githooks.checkjira.issuetype ISSUETYPENAME
+
+This option is B<DEPRECATED>. Please, use a JQL expression such the
+following to restrict by issue type:
+
+  issuetype IN (Bug, Story)
+
+By default, it doesn't matter what type of JIRA issues are cited. By setting
+this multi-valued option you can restrict the valid issue types.
+
 =head1 EXPORTS
 
 This module exports two routines that can be used directly without
@@ -811,5 +880,10 @@ Nath's L<git-jira-hook|https://github.com/joyjit/git-jira-hook>.
 
 =item L<JIRA SOAP API deprecation
 notice|https://developer.atlassian.com/display/JIRADEV/SOAP+and+XML-RPC+API+Deprecated+in+JIRA+6.0>
+
+=item <Yet Another Commit
+Checker|https://github.com/sford/yet-another-commit-checker> is a Bitbucket
+plugin which implements some nice checks with JIRA, from which we stole some
+ideas.
 
 =back
